--- a/tposhare/pubspec.yaml
+++ b/tposhare/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  firebase_auth:
+  firebase_core:
+  google_sign_in:
+  flutterfire_ui:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
