--- a/tposhare/pubspec.yaml
+++ b/tposhare/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core:
   google_sign_in:
   flutterfire_ui:
+  get:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
